--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 sqlsorcery = {extras = ["mssql"], version = "*"}
+pysftp = "*"
 
 [requires]
 python_version = "3.8"
